both tokens saved securely inside httpOnly cookies and cant be accessed using JS. created a /me backend endpoint to fetch user data from refreshToken

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -140,6 +140,9 @@
     @apply text-lg font-bold;
   }
   p {
-    @apply text-base;
+    @apply text-base  ;
+  }
+  .heading {
+    @apply text-4xl font-bold tracking-tighter
   }
 }
