--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -143,6 +143,15 @@
     @apply text-base  ;
   }
   .heading {
-    @apply text-4xl font-bold tracking-tighter
+    @apply text-4xl font-semibold tracking-tighter
+  }
+  .bigText {
+    @apply text-6xl font-semibold tracking-tighter
+  }
+  .smallText {
+    @apply text-sm font-normal tracking-tight text-muted-foreground 
+  }
+  .text-xxl {
+    @apply text-2xl font-bold tracking-tight
   }
 }
